@@ -17,7 +17,7 @@
 
 #define BLOSC_VERSION_STRING   "1.1.a1.dev"  /* string version.  Sync with above! */
 #define BLOSC_VERSION_REVISION "$Rev$"   /* revision version */
-#define BLOSC_VERSION_DATE     "2010-07-01"    /* date version */
+#define BLOSC_VERSION_DATE     "2010-08-11"    /* date version */
 
 /* The *_VERS_FORMAT should be just 1-byte long */
 #define BLOSC_VERSION_FORMAT    2   /* Blosc format version, starting at 1 */
@@ -28,6 +28,9 @@
 
 /* The maximum overhead during compression in bytes */
 #define BLOSC_MAX_OVERHEAD 16
+
+/* Maximum typesize before considering buffer as a stream of bytes. */
+#define BLOSC_MAX_TYPESIZE 255       /* Cannot be larger than 255 */
 
 
 /* Codes for internal flags */
