@@ -10,7 +10,8 @@
 Changes from 1.0 to 1.1.a1
 ==========================
 
-- None yet.
+- Fixed a problem with large datatypes.
+  See http://www.pytables.org/trac/ticket/288 for more info.
 
 
 Changes from 0.9.5 to 1.0
